2013-10-10  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (S2K_ITER): Remove.  It's determined at compile time.

	* src/openpgp-do.c (proc_resetting_code, gpg_do_write_prvkey)
	(proc_key_import): Remove "iteration" field.

	* src/openpgp.c (cmd_change_password): Likewise.

2013-10-10  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_do_write_prvkey): Access of data object
	considering garbage collection.

	* src/openpgp.c (cmd_change_password): Call gpg_do_write_simple
	after accessing the data object (it may cause garbage collection).

2013-10-10  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/library/bignum.c (mpi_montred): Constant time for
	carry propagation.  Bug fix for carry propagation.
	(mpi_exp_mod): Bug fix.  Shrink the size of RR as same as X.

2013-10-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/ac.c (verify_user_0, verify_admin_00, verify_admin_0): Add a
	flag to save into keystring_md_pw3.  Add SALT handling.
	(decode_iterate_count, calc_md, gpg_set_pw3): Remove.

	* src/openpgp-do.c (proc_resetting_code, gpg_do_write_prvkey)
	(gpg_do_keygen): Add SALT handling.
	* src/openpgp.c (cmd_change_password, cmd_reset_user_password)
	(s2k): Ditto.
	* src/random.c (random_get_salt): Rename from get_salt.

2013-10-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_do_write_prvkey): Remove information (but
	pass phrase length) for admin from keystring data object.
	(proc_key_import): Recover admin keystring to DO when key deletion.

2013-10-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/ac.c (verify_user_0, verify_admin_00): Handle PW_LEN_MASK.
	* src/openpgp-do.c (proc_resetting_code, gpg_do_write_prvkey):
	Likewise.

	* src/openpgp.c (cmd_change_password, cmd_reset_user_password):
	Handle PW_LEN_KEYSTRING_BIT.

2013-10-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/ac.c (verify_admin_00): New.  Add authentication by loading
	signature key.
	(verify_admin_0): Use verify_admin_00.

	* src/openpgp.c (cmd_change_password): Admin keystring handling as